css for south is ok

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	
 	<title>Sef-Orienting Popup by YaFred</title>
 	
-	<script src="//unpkg.com/leaflet@1.0.2/dist/leaflet.js"></script>
-	<link rel="stylesheet" href="//unpkg.com/leaflet@1.0.2/dist/leaflet.css" />
+	<script src="http://unpkg.com/leaflet@1.0.2/dist/leaflet.js"></script>
+	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.2/dist/leaflet.css" />
 	
 	<script src="assets/leaflet.so.popup-src.js"></script>
 	<link rel="stylesheet" href="assets/leaflet.so.popup.css" />
@@ -36,9 +36,9 @@
     <div class="leaflet-container" style="width: 450px; height: 400px; margin-bottom:20px; background-color: #C0ffC0;">
     
        <div class="leaflet-popup leaflet-zoom-animated" style="margin-top: 80px; margin-left: 130px">
-          <a href="#close" class="leaflet-popup-close-button">×</a>
-          <div class="leaflet-popup-tip-container">
-             <div class="leaflet-popup-tip"></div>
+          <a href="#close" class="leaflet-popup-close-button leaflet-so-popup-close-button-s">×</a>
+          <div class="leaflet-popup-tip-container leaflet-so-popup-tip-container">
+             <div class="leaflet-popup-tip leaflet-so-popup-tip-s"></div>
           </div>
           <div class="leaflet-popup-content-wrapper">
              <div class="leaflet-popup-content">Towards south.</div>
@@ -86,12 +86,12 @@
        </div>
 
        <div class="leaflet-popup leaflet-zoom-animated" style="margin-top: 150px; margin-left: 280px">
-          <a href="#close" class="leaflet-popup-close-button">×</a>
-          <div class="leaflet-popup-content-wrapper">
+          <a href="#close" class="leaflet-popup-close-button leaflet-so-popup-close-button-w">×</a>
+          <div class="leaflet-popup-content-wrapper leaflet-so-popup-content-wrapper-w">
              <div class="leaflet-popup-content">Towards west.</div>
           </div>
-          <div class="leaflet-popup-tip-container">
-             <div class="leaflet-popup-tip"></div>
+          <div class="leaflet-popup-tip-container leaflet-so-popup-tip-container-w">
+             <div class="leaflet-popup-tip leaflet-so-popup-tip-w"></div>
           </div>
        </div>
 
