--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     
        <div class="leaflet-popup leaflet-zoom-animated" style="margin-top: 80px; margin-left: 130px">
           <a href="#close" class="leaflet-popup-close-button leaflet-so-popup-close-button-s">×</a>
-          <div class="leaflet-popup-tip-container leaflet-so-popup-tip-container">
+          <div class="leaflet-popup-tip-container leaflet-so-popup-tip-container-s">
              <div class="leaflet-popup-tip leaflet-so-popup-tip-s"></div>
           </div>
           <div class="leaflet-popup-content-wrapper">
@@ -45,27 +45,27 @@
           </div>
        </div>       
        
-       <div class="leaflet-popup leaflet-zoom-animated" style="margin-top: 0px; margin-left: 0px">
+       <div class="leaflet-popup leaflet-zoom-animated" style="margin-top: 20px; margin-left: 20px">
           <a href="#close" class="leaflet-popup-close-button">×</a>
-          <div class="leaflet-popup-content-wrapper">
-             <div class="leaflet-popup-content">Towards south/east.</div>
+          <div class="leaflet-popup-tip-container leaflet-so-popup-tip-container-se">
+             <div class="leaflet-popup-tip leaflet-so-popup-tip-se"></div>
           </div>
-          <div class="leaflet-popup-tip-container">
-             <div class="leaflet-popup-tip"></div>
+          <div class="leaflet-popup-content-wrapper leaflet-so-popup-content-wrapper-se">
+             <div class="leaflet-popup-content">Towards south/east.</div>
           </div>
        </div>
 
-       <div class="leaflet-popup leaflet-zoom-animated" style="margin-top: 150px; margin-left: 0px">
+       <div class="leaflet-popup leaflet-zoom-animated" style="margin-top: 150px; margin-left: 30px">
           <a href="#close" class="leaflet-popup-close-button">×</a>
           <div class="leaflet-popup-content-wrapper">
              <div class="leaflet-popup-content">Towards east.</div>
           </div>
-          <div class="leaflet-popup-tip-container">
-             <div class="leaflet-popup-tip"></div>
+          <div class="leaflet-popup-tip-container leaflet-so-popup-tip-container-e">
+             <div class="leaflet-popup-tip leaflet-so-popup-tip-e"></div>
           </div>
        </div>
 
-       <div class="leaflet-popup leaflet-zoom-animated" style="margin-top: 330px; margin-left: 0px">
+       <div class="leaflet-popup leaflet-zoom-animated" style="margin-top: 330px; margin-left: 20px">
           <a href="#close" class="leaflet-popup-close-button">×</a>
           <div class="leaflet-popup-content-wrapper">
              <div class="leaflet-popup-content">Towards north/east.</div>
@@ -75,7 +75,7 @@
           </div>
        </div>
 
-       <div class="leaflet-popup leaflet-zoom-animated" style="margin-top: 0px; margin-left: 280px">
+       <div class="leaflet-popup leaflet-zoom-animated" style="margin-top: 20px; margin-left: 280px">
           <a href="#close" class="leaflet-popup-close-button">×</a>
           <div class="leaflet-popup-content-wrapper">
              <div class="leaflet-popup-content">Towards south/west.</div>
@@ -86,8 +86,8 @@
        </div>
 
        <div class="leaflet-popup leaflet-zoom-animated" style="margin-top: 150px; margin-left: 280px">
-          <a href="#close" class="leaflet-popup-close-button leaflet-so-popup-close-button-w">×</a>
-          <div class="leaflet-popup-content-wrapper leaflet-so-popup-content-wrapper-w">
+          <a href="#close" class="leaflet-popup-close-button">×</a>
+          <div class="leaflet-popup-content-wrapper">
              <div class="leaflet-popup-content">Towards west.</div>
           </div>
           <div class="leaflet-popup-tip-container leaflet-so-popup-tip-container-w">
