--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
 
        <div class="leaflet-popup leaflet-zoom-animated" style="margin-top: 330px; margin-left: 20px">
           <a href="#close" class="leaflet-popup-close-button">×</a>
-          <div class="leaflet-popup-content-wrapper">
+          <div class="leaflet-popup-content-wrapper leaflet-so-popup-content-wrapper-ne">
              <div class="leaflet-popup-content">Towards north/east.</div>
           </div>
-          <div class="leaflet-popup-tip-container">
-             <div class="leaflet-popup-tip"></div>
+          <div class="leaflet-popup-tip-container leaflet-so-popup-tip-container-ne">
+             <div class="leaflet-popup-tip leaflet-so-popup-tip-ne"></div>
           </div>
        </div>
 
@@ -97,11 +97,11 @@
 
        <div class="leaflet-popup leaflet-zoom-animated" style="margin-top: 330px; margin-left: 280px">
           <a href="#close" class="leaflet-popup-close-button">×</a>
-          <div class="leaflet-popup-content-wrapper">
+          <div class="leaflet-popup-content-wrapper leaflet-so-popup-content-wrapper-nw">
              <div class="leaflet-popup-content">Towards north/west.</div>
           </div>
-          <div class="leaflet-popup-tip-container">
-             <div class="leaflet-popup-tip"></div>
+          <div class="leaflet-popup-tip-container leaflet-so-popup-tip-container-nw">
+             <div class="leaflet-popup-tip leaflet-so-popup-tip-nw"></div>
           </div>
        </div>
       
