--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
 
        <div class="leaflet-popup leaflet-zoom-animated" style="margin-top: 20px; margin-left: 280px">
           <a href="#close" class="leaflet-popup-close-button">×</a>
-          <div class="leaflet-popup-content-wrapper">
-             <div class="leaflet-popup-content">Towards south/west.</div>
+          <div class="leaflet-popup-tip-container leaflet-so-popup-tip-container-sw">
+             <div class="leaflet-popup-tip leaflet-so-popup-tip-sw"></div>
           </div>
-          <div class="leaflet-popup-tip-container">
-             <div class="leaflet-popup-tip"></div>
+          <div class="leaflet-popup-content-wrapper leaflet-so-popup-content-wrapper-sw">
+             <div class="leaflet-popup-content">Towards south/west.</div>
           </div>
        </div>
 
