--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 	<script src="http://unpkg.com/leaflet@1.0.2/dist/leaflet.js"></script>
 	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.2/dist/leaflet.css" />
 	
-	<script src="assets/leaflet.so.popup-src.js"></script>
-	<link rel="stylesheet" href="assets/leaflet.so.popup.css" />
+	<script src="assets/leaflet.responsive.popup-src.js"></script>
+	<link rel="stylesheet" href="assets/leaflet.responsive.popup.css" />
 </head>
 <body>
 
